--- a/Day - 5/practiced.html
+++ b/Day - 5/practiced.html
@@ -5,10 +5,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day - 5</title>
+
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        a{
+            text-decoration: none;
+            color: white;
+            border-bottom: 1px solid rgb(174, 15, 15);
+        }
+        header{
+            background-color: rgb(0, 0, 122);
+            display: flex;
+            align-self: center;
+            justify-content: center;
+            align-content: space-around;
+            flex-wrap: wrap;
+        }
+
+        ul{
+            display: flex;
+            margin: 0 20px;
+            list-style: none;
+        }
+        li{
+            margin: 20px;
+        }
+        input{
+            border-radius: 8px;
+            text-align: center;
+            border: 1px solid red;
+            padding: 20px;
+        }
+        main{
+            background-color: rgb(52, 50, 50) 600;
+        }
+        
+
+    </style>
 </head>
 <body>
-    <header>
-        <h3 style="color: rgb(235, 7, 7);">SemEl</h3>
+    <header >
+        <h3 style="color: rgb(235, 7, 7);margin-top: 17px;">SemEl</h3>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+        <input type="search" name="Name" placeholder="Search here">
     </header>
+
+    <main>
+        <section style="background-color: rgb(112, 152, 152);">
+            <H3 style="margin-top: 20px; padding: 10px;">Things Discussed...</H3>
+            <ol>
+                <li>Article</li>
+                <li>Figure</li>
+                <li>Figure Caption</li>
+                <li>Image</li>
+                <li>Mark</li>
+            </ol>
+
+            <article>
+                <h1>
+                    Article Tag
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores et veniam, harum reiciendis officia ipsam ea dolorum tenetur eaque quidem nihil quae quod. Ut placeat, accusantium harum deserunt nam consectetur.
+
+                    <pre>
+                                Water Water everywhere
+                                No A Drop Fro Drinking
+                    </pre>
+                    <figure>
+                        <figcaption>Hero Image</figcaption>
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSb_T0lx5kPkS7htyLMshzOiW9W4FTjeWba1SA49EfU&s" alt="BG Hero Text" style="width: 500px;">
+                    </figure>
+                    <aside>
+                        <h1>This is the comment about the blog</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae perferendis distinctio explicabo inventore dolorum tempora saepe recusandae commodi excepturi at.
+                        </p>
+                    </aside>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores et veniam, harum reiciendis officia ipsam ea dolorum tenetur eaque quidem nihil quae quod. Ut placeat, accusantium harum deserunt nam consectetur.
+                    </p>
+                    <br>
+                    <h3>
+                        Lorem, ipsum dolor.
+                    </h3>
+                    <ol>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    </ol>
+                </p>
+            </article>
+            <h4>Image With Fig and Fig Caption</h4>
+            <figure>
+                <figcaption>Hero Image</figcaption>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSb_T0lx5kPkS7htyLMshzOiW9W4FTjeWba1SA49EfU&s" alt="BG Hero Text" style="width: 500px;">
+            </figure>
+            <details>Details about the article</details>
+        </section>
+    </main>
+    <footer style="width: 100%;background-color: rgb(240, 122, 122);height: 20px;">
+        <cite>Author | Khuram Shahzad</cite>
+        <summary>
+            The summary is nothing.
+        </summary>
+    </footer>
+
 </body>
 </html>
